metadata/Vendor-bids/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Chemical Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Component Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical Industry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leads_Email__c</fullName>
        <description>Companies Sales department email</description>
        <label>Leads_Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone_Number__c</fullName>
        <description>Fill out your phone number so that buyers can contact you.</description>
        <label>Vendor_Phone_Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>